--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,13 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.486.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.1.0",
+    "tw-animate-css": "^1.2.5"
   }
 }
