--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,7 +6,9 @@
   "exports": {
     "./base": "./base.js",
     "./next-js": "./next.js",
-    "./react-internal": "./react-internal.js"
+    "./react-internal": "./react-internal.js",
+    "./gatsby": "./gatsby.js",
+    "./library": "./library.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
