--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,8 +20,12 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
+    "gatsby-plugin-postcss": "^6.14.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.5.4"
   }
 }
