--- a/apps/api-hono/package.json
+++ b/apps/api-hono/package.json
@@ -1,18 +1,15 @@
 {
   "name": "api-hono",
-  "version": "1.0.0",
-  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
-   
+    "@hono/node-server": "^1.14.0",
+    "hono": "^4.7.5"
   },
   "devDependencies": {
-    "@types/node": "^20.11.19",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1"
   }
-} 
+}
